--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,3 +18,10 @@ repos:
         entry: poetry run isort
         language: system
         types: [ python ]
+
+      - id: pyupgrade
+        name: pyupgrade
+        entry: poetry run pyupgrade
+        args: [ --py38-plus ]
+        language: system
+        types: [ python ]
