--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,9 @@ profile = "black"
 black = "^22.1.0"
 isort = "^5.10.1"
 pre-commit = "^2.17.0"
+pyupgrade = "^2.31.1"
 
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
