added coverage tooling

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,3 +25,9 @@ repos:
         args: [ --py38-plus ]
         language: system
         types: [ python ]
+
+      - id: coverage
+        name: coverage
+        entry: poetry run pytest --cov
+        language: system
+        types: [ python ]
