--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,24 @@ line-length = 120
 multi_line_output = 3
 profile = "black"
 
+[tool.coverage.paths]
+source = ["src"]
+
+[tool.coverage.run]
+omit = ["*test*"]
+
+[tool.coverage.report]
+show_missing = true
+fail_under = 100
+
+
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
 isort = "^5.10.1"
 pre-commit = "^2.17.0"
 pyupgrade = "^2.31.1"
+coverage = {extras = ["toml"], version = "^6.3.2"}
+pytest-cov = "^3.0.0"
 
 
 [build-system]
