install poetry on ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,5 +14,6 @@ jobs:
     - name: Display Python version
       run: python -c "import sys; print(sys.version)"
     - run: pip install poetry
+    - run: poetry install
     - name: Coverage
       run: poetry run pytest --cov
