--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,14 @@ pre-commit = "^2.17.0"
 pyupgrade = "^2.31.1"
 coverage = {extras = ["toml"], version = "^6.3.2"}
 pytest-cov = "^3.0.0"
+pylint = "^2.13.5"
 
+[tool.pylint.FORMAT]
+max-line-length = 120
+
+disable = ["missing-function-docstring",
+    "missing-module-docstring",
+    "missing-class-docstring"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
