--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,3 +25,14 @@ repos:
         args: [ --py38-plus ]
         language: system
         types: [ python ]
+
+      - id: pylint
+        name: pylint
+        entry: poetry run pylint ./src
+        language: system
+        types: [ python ]
+        args:
+          [
+            "-rn", # Only display messages
+            "-sn", # Don't display the score
+          ]
