Set proper category for Bazel incompatibility flag

--- a/.bazelrc
+++ b/.bazelrc
@@ -6,9 +6,9 @@ common --incompatible_disallow_empty_glob
 common --incompatible_no_implicit_file_export
 common --incompatible_struct_has_no_methods
 common --incompatible_use_cc_configure_from_rules_cc
-common --incompatible_use_platforms_repo_for_constraints
 common --incompatible_visibility_private_attributes_at_definition
 build --incompatible_default_to_explicit_init_py
+build --incompatible_use_platforms_repo_for_constraints
 
 # Allow users to provide their own workspace settings
 try-import %workspace%/.bazelrc.user
