--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,14 @@ name: CI
 on: [push, pull_request]
 
 jobs:
+  pre-commit:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
+      - uses: snok/install-poetry@v1
+      - uses: pre-commit/action@v2.0.3
+
   tests:
     runs-on: ubuntu-20.04
     steps:
