Allow ignoring include paths via patterns
Ignoring many headers from a common source can be cumbersome. Thus, we
support ignoring headers matching regex patterns.

--- a/test/aspect/custom_config/BUILD
+++ b/test/aspect/custom_config/BUILD
@@ -2,6 +2,7 @@ exports_files([
     "extra_ignore_include_paths.json",
     "full_custom_config.json",
     "ignore_include_paths.json",
+    "ignore_include_patterns.json",
 ])
 
 # Has an invalid include besides a standard include, which does however not cause an error due to the ignore list in the config
@@ -20,4 +21,10 @@ cc_library(
 cc_library(
     name = "use_multiple_arcane_headers",
     hdrs = ["use_multiple_arcane_headers.h"],
+)
+
+# Has multiple invalid includes, which do however not cause an error due to them matching the ignored patterns
+cc_library(
+    name = "use_ignored_patterns",
+    hdrs = ["use_ignored_patterns.h"],
 )
