Make ignore includes config fields optional
- BREAKING CHANGE: Having an empty `ignore_include_paths` field in the
  config file is interpreted as "no default ignores" instead of
  "use default ignores"
- The various fields in the ignore includes config file are now optional
- Moving the get ignored includes code to achieve better structure and
  encapsulation as well as ease testing
- Simplify CLI parsing code by directly constructing Path objects
- Simplify integration tests due to increased unit test coverage for configs

--- a/src/analyze_includes/test/BUILD
+++ b/src/analyze_includes/test/BUILD
@@ -20,8 +20,10 @@ py_test(
     name = "parse_config_test",
     srcs = ["parse_config_test.py"],
     data = [
-        "data/config.json",
-        "data/config_empty.json",
+        "data/config/empty.json",
+        "data/config/extra_ignore_paths.json",
+        "data/config/ignore_patterns.json",
+        "data/config/overwrite_default_ignore_paths.json",
     ],
     deps = ["//src/analyze_includes:lib"],
 )
