Naming: change all uses of "deps_info" to "headers_info" to reduce cognitive overhead.

--- a/src/analyze_includes/test/BUILD
+++ b/src/analyze_includes/test/BUILD
@@ -10,8 +10,8 @@ py_test(
     name = "get_dependencies_test",
     srcs = ["get_dependencies_test.py"],
     data = [
-        "data/deps_info_empty.json",
-        "data/deps_info_full.json",
+        "data/headers_info_empty.json",
+        "data/headers_info_full.json",
     ],
     deps = ["//src/analyze_includes:lib"],
 )
