Make sure implementations_deps is not used on non library targets
The implementation_deps feature is only meaningful and available for
cc_library, where in contrast to cc_binary and cc_test a separation
between public and private files exists.

--- a/test/aspect/implementation_deps/BUILD
+++ b/test/aspect/implementation_deps/BUILD
@@ -25,3 +25,15 @@ cc_library(
         ":foo",
     ],
 )
+
+cc_binary(
+    name = "binary_using_foo",
+    srcs = ["binary_using_foo.cpp"],
+    deps = [":foo"],
+)
+
+cc_test(
+    name = "test_using_foo",
+    srcs = ["binary_using_foo.cpp"],
+    deps = [":foo"],
+)
