Restructure apply fixes integration tests
A single test workspace does not scale with an increasing amount of test
cases. Separating tests into clusters allows easier to understand test
cases and gives related tests a common context.

--- a/test/apply_fixes/unused_dependency/workspace/BUILD
+++ b/test/apply_fixes/unused_dependency/workspace/BUILD
@@ -11,11 +11,15 @@ cc_library(
 cc_library(
     name = "lib_c",
     hdrs = ["lib_c.h"],
+    deps = [
+        ":lib_a",
+        ":lib_b",
+    ],
 )
 
 cc_library(
     name = "unused_public_dep",
-    srcs = ["using_lib_a.cpp"],
+    srcs = ["using_a.cpp"],
     deps = [
         ":lib_a",
         ":lib_b",  # unused
@@ -25,24 +29,10 @@ cc_library(
 
 cc_library(
     name = "unused_private_dep",
-    srcs = ["using_lib_a.cpp"],
+    srcs = ["using_a.cpp"],
     implementation_deps = [
         ":lib_a",
         ":lib_b",  # unused
         ":lib_c",  # unused
-    ],
-)
-
-cc_library(
-    name = "public_dependency_with_private_use",
-    srcs = [
-        "using_lib_a.cpp",
-        "using_lib_b.cpp",
-    ],
-    hdrs = ["using_lib_c.h"],
-    deps = [
-        ":lib_a",  # only used privately
-        ":lib_b",  # only used privately
-        ":lib_c",
     ],
 )
