Split apply fixes script into main and impl
Clear separation between command line interface and implementation.

--- a/src/apply_fixes/BUILD
+++ b/src/apply_fixes/BUILD
@@ -2,6 +2,9 @@ load("@rules_python//python:defs.bzl", "py_binary")
 
 py_binary(
     name = "main",
-    srcs = ["main.py"],
+    srcs = [
+        "apply_fixes.py",
+        "main.py",
+    ],
     visibility = ["//:__pkg__"],
 )
