Introduce abstraction for executing buildozer commands
Providing a central entry point for executing buildozer allows us to
simplify the execution logic and function interfaces

--- a/src/apply_fixes/BUILD
+++ b/src/apply_fixes/BUILD
@@ -1,10 +1,18 @@
-load("@rules_python//python:defs.bzl", "py_binary")
+load("@rules_python//python:defs.bzl", "py_binary", "py_library")
+
+py_library(
+    name = "lib",
+    srcs = [
+        "apply_fixes.py",
+        "buildozer_executor.py",
+        "summary.py",
+    ],
+    visibility = [":__subpackages__"],
+)
 
 py_binary(
     name = "main",
-    srcs = [
-        "apply_fixes.py",
-        "main.py",
-    ],
+    srcs = ["main.py"],
     visibility = ["//:__pkg__"],
+    deps = [":lib"],
 )
