apply_fixes: Add unit tests for helper functions

--- a/src/apply_fixes/test/BUILD
+++ b/src/apply_fixes/test/BUILD
@@ -1,6 +1,12 @@
 load("@rules_python//python:defs.bzl", "py_test")
 
 py_test(
+    name = "apply_fixes_test",
+    srcs = ["apply_fixes_test.py"],
+    deps = ["//src/apply_fixes:lib"],
+)
+
+py_test(
     name = "buildozer_executor_test",
     srcs = ["buildozer_executor_test.py"],
     deps = ["//src/apply_fixes:lib"],
