Simplify dependency discovery logic
We search only for dependencies potentially providing a header for an
include statement in the dependency tree of the target under inspection.
We work with the assumption that the code we analyze is compiling. Thus,
the target providing the required headers has to be in the transitive
dependencies.

We query all dependencies of the target under inspection and their headers
once and then analyze this ourselves without further query calls. This
eases testing and improves the performance as subprocess calls are quite
expensive.

--- a/test/apply_fixes/missing_dependency/workspace/BUILD
+++ b/test/apply_fixes/missing_dependency/workspace/BUILD
@@ -46,7 +46,10 @@ cc_library(
 cc_library(
     name = "ambiguous_lib_provider",
     srcs = ["dummy.h"],
-    deps = ["//ambiguous_lib:lib_b"],
+    deps = [
+        "//ambiguous_lib:lib_a",
+        "//ambiguous_lib:lib_b",
+    ],
 )
 
 cc_library(
