--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,13 @@ repos:
       - id: trailing-whitespace
       # Python code quality
       - id: debug-statements
+  - repo: https://github.com/executablebooks/mdformat
+    rev: 0.7.16  # Use the ref you want to point at
+    hooks:
+      - id: mdformat
+        # Optionally add plugins
+        additional_dependencies:
+          - mdformat-gfm
 
   - repo: local
     hooks:
