Make custom bazelrc pattern compliant to the upstream pattern
Make the pattern compliant to how the Bazel project does it:
- https://github.com/bazelbuild/bazel/blob/8482c7cf494686eb7498cec6ee58dad03b07ef0d/.bazelrc#L42
- https://github.com/bazelbuild/rules_rust/blob/ba0fb5956c0b9ef94928ceca566268ef3c9cdbb9/.bazelrc#L41

--- a/.bazelrc
+++ b/.bazelrc
@@ -11,4 +11,4 @@ build --incompatible_default_to_explicit_init_py
 build --incompatible_use_platforms_repo_for_constraints
 
 # Allow users to provide their own workspace settings
-try-import %workspace%/.bazelrc.user
+try-import %workspace%/user.bazelrc
