Use pcpp to parse C/C++ source code
In this first step we simplify our own code by using a well tested
preprocessor to prune commented code instead of relying on our own
implementation.
In the future we will build on this and support resolving defines

--- a/src/analyze_includes/BUILD
+++ b/src/analyze_includes/BUILD
@@ -1,3 +1,4 @@
+load("@dwyu_py_deps//:requirements.bzl", "requirement")
 load("@rules_python//python:defs.bzl", "py_binary", "py_library")
 
 py_library(
@@ -10,6 +11,7 @@ py_library(
         "system_under_inspection.py",
     ],
     visibility = [":__subpackages__"],
+    deps = [requirement("pcpp")],
 )
 
 py_binary(
