Add integration tests for processing defines
Note for now we only analyze each file for itself. Defines specified in
header A which is then included in header B do not yet influence the
defines processing in header B.

--- a/test/aspect/defines/BUILD
+++ b/test/aspect/defines/BUILD
@@ -4,3 +4,20 @@ cc_library(
     deps = ["//test/aspect/defines/lib:a"],
 )
 
+cc_library(
+    name = "defines_from_bazel_target",
+    hdrs = ["defines_from_bazel_target.h"],
+    copts = ["-DSOME_COPT 42"],
+    defines = ["SOME_DEFINE"],
+    local_defines = ["LOCAL_DEFINE"],
+    deps = ["//test/aspect/defines/lib:a"],
+)
+
+cc_library(
+    name = "transitive_defines_from_bazel_target",
+    hdrs = ["transitive_defines_from_bazel_target.h"],
+    deps = [
+        "//test/aspect/defines/lib:a",
+        "//test/aspect/defines/support:transitive_define",
+    ],
+)
