Enable processing defines from included headers
This allows properly analyzing code which uses config headers for setting
various defines which influence the code. For example for platform specific
behavior.
Furthermore, we fix a bug in passing defines to our pre processor.

--- a/src/analyze_includes/test/BUILD
+++ b/src/analyze_includes/test/BUILD
@@ -28,7 +28,9 @@ py_test(
         "data/commented_includes/single_line_comments.h",
         "data/empty_header.h",
         "data/header_with_defines.h",
+        "data/some_defines.h",
         "data/some_header.h",
+        "data/use_defines.h",
     ],
     deps = ["//src/analyze_includes:lib"],
 )
