--- a/test/aspect/defines/BUILD
+++ b/test/aspect/defines/BUILD
@@ -1,7 +1,7 @@
 cc_library(
     name = "in_file_defines",
     hdrs = ["in_file_defines.h"],
-    deps = ["//test/aspect/defines/lib:a"],
+    deps = ["//test/aspect/defines/support:lib_a"],
 )
 
 cc_library(
@@ -10,14 +10,23 @@ cc_library(
     copts = ["-DSOME_COPT 42"],
     defines = ["SOME_DEFINE"],
     local_defines = ["LOCAL_DEFINE"],
-    deps = ["//test/aspect/defines/lib:a"],
+    deps = ["//test/aspect/defines/support:lib_a"],
 )
 
 cc_library(
     name = "transitive_defines_from_bazel_target",
     hdrs = ["transitive_defines_from_bazel_target.h"],
     deps = [
-        "//test/aspect/defines/lib:a",
+        "//test/aspect/defines/support:lib_a",
         "//test/aspect/defines/support:transitive_define",
+    ],
+)
+
+cc_library(
+    name = "use_defines_from_dependency_header",
+    hdrs = ["use_defines_from_dependency_header.h"],
+    deps = [
+        "//test/aspect/defines/support:conditional_defines",
+        "//test/aspect/defines/support:lib_b",
     ],
 )
