--- a/src/analyze_includes/test/BUILD
+++ b/src/analyze_includes/test/BUILD
@@ -28,6 +28,7 @@ py_test(
         "data/commented_includes/single_line_comments.h",
         "data/empty_header.h",
         "data/header_with_defines.h",
+        "data/include_based_on_pre_processor_token.h",
         "data/some_defines.h",
         "data/some_header.h",
         "data/use_defines.h",
