Fix recursive behavior for implementation_deps

--- a/test/aspect/recursion/BUILD
+++ b/test/aspect/recursion/BUILD
@@ -1,4 +1,4 @@
-load("//test/aspect/recursion:rule.bzl", "dwyu_rule_direct", "dwyu_rule_recursive")
+load("//test/aspect/recursion:rule.bzl", "dwyu_rule_direct", "dwyu_rule_recursive", "dwyu_rule_recursive_with_impl_deps")
 
 # Has a diamond dependency towards C through A and B
 # main specifies its dependencies correctly, but C has an error
@@ -50,4 +50,15 @@ cc_library(
 cc_library(
     name = "e",
     hdrs = ["e.h"],
+)
+
+cc_library(
+    name = "use_impl_deps",
+    srcs = ["use_impl_deps.cpp"],
+    implementation_deps = [":a"],
+)
+
+dwyu_rule_recursive_with_impl_deps(
+    name = "dwyu_recursive_use_impl_deps",
+    deps = [":use_impl_deps"],
 )
