Update Bazel mypy integration
The latest version decouples the mypy Bazel integration from the mypy
library. This eases integrating it into other projects like DWYU.

--- a/.bazelrc
+++ b/.bazelrc
@@ -4,6 +4,7 @@ test --test_output=errors
 # Mypy integration
 build:mypy --aspects=@mypy_integration//:mypy.bzl%mypy_aspect
 build:mypy --output_groups=mypy
+build:mypy --@mypy_integration//:mypy=//third_party:mypy
 build:mypy --@mypy_integration//:mypy_config=//:mypy.ini
 
 # Allow users to provide their own workspace settings
