--- a/test/aspect/external_repo/BUILD
+++ b/test/aspect/external_repo/BUILD
@@ -2,7 +2,7 @@ cc_library(
     name = "use_external_libs",
     hdrs = ["use_external_libs.h"],
     deps = [
-        "@ext_repo//:ext_bar",
-        "@ext_repo//:ext_foo",
+        "@external_test_repo//:ext_bar",
+        "@external_test_repo//:ext_foo",
     ],
 )
