--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -10,6 +10,11 @@ bazel_dep(
     version = "1.5.0",
 )
 bazel_dep(
+    name = "rules_cc",
+    # Keep in sync with //third_party/dependencies.bzl
+    version = "0.0.9",
+)
+bazel_dep(
     name = "rules_python",
     # Keep in sync with //third_party/dependencies.bzl
     version = "0.27.0",
@@ -108,10 +113,5 @@ local_path_override(
 bazel_dep(
     name = "platforms",
     version = "0.0.7",
-    dev_dependency = True,
-)
-bazel_dep(
-    name = "rules_cc",
-    version = "0.0.1",
     dev_dependency = True,
 )
