--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,7 @@ on: [ pull_request ]
 
 jobs:
   pre-commit:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
       - uses: snok/install-poetry@v1
@@ -14,7 +14,7 @@ jobs:
           installer-parallel: true
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.8
+          python-version: "3.10"
           cache: 'poetry'
       - name: Install dependencies
         run: poetry install --no-interaction --no-root
@@ -22,7 +22,7 @@ jobs:
       - uses: pre-commit/action@v3.0.0
 
   fast-tests:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
       - name: Unit tests
@@ -31,7 +31,7 @@ jobs:
         run: bazel build --config=mypy -- //src/... //test/aspect:all
 
   integration-tests-aspect:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs: [ pre-commit, fast-tests ]
     steps:
       - uses: actions/checkout@v4
@@ -39,7 +39,7 @@ jobs:
         run: ./test/aspect/execute_tests.py
 
   integration-tests-apply-fixes:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs: [ pre-commit, fast-tests ]
     steps:
       - run: |
@@ -51,23 +51,3 @@ jobs:
         run: |
           export PATH=/tmp/bin:$PATH
           ./test/apply_fixes/execute_tests.py
-
-  # tests:
-  #   runs-on: ubuntu-20.04
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #   - uses: snok/install-poetry@v1
-  #     with:
-  #       virtualenvs-create: true
-  #       virtualenvs-in-project: true
-  #       installer-parallel: true
-  #   - uses: actions/setup-python@v5
-  #     with:
-  #       python-version: 3.8
-  #       cache: 'poetry'
-  #   - name: Install dependencies
-  #     run: poetry install --no-interaction --no-root
-  #   - name: Display Python version
-  #     run: python -c "import sys; print(sys.version)"
-  #   - name: Coverage
-  #     run: poetry run pytest --cov --pylint
