Use Ruff for formatting
Ruff is significantly faster and enables us also toeasily use more kinds
of linting.
We can achieve the same reults by combining various other estbalished tools.
However, using Ruff enables is to maintain and configure a single tool
instead of many, which eases the overall integration. This is especially
true for the IDE, which nicely highlights the linting results of Ruff
without much configuring.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,15 +30,14 @@ repos:
           "--diff_command='diff'",
           "--warnings=-module-docstring,-function-docstring,-function-docstring-header,-print"
         ]
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.1.9
+    hooks:
+      - id: ruff-format
 
   - repo: local
     hooks:
-      - id: black
-        name: black
-        entry: poetry run black
-        language: system
-        types: [ python ]
-
       - id: isort
         name: isort
         entry: poetry run isort
