--- a/ruff.toml
+++ b/ruff.toml
@@ -15,3 +15,19 @@ skip-magic-trailing-comma = false
 line-ending = "auto"
 # We have no Python code in documentation
 docstring-code-format = false
+
+[lint]
+select = [
+    # pycodestyle
+    # "E",
+    # Pyflakes
+    # "F",
+    # pyupgrade
+    # "UP",
+    # flake8-bugbear
+    # "B",
+    # flake8-simplify
+    # "SIM",
+    # isort
+    "I",
+]
