--- a/ruff.toml
+++ b/ruff.toml
@@ -32,8 +32,12 @@ select = [
     "SIM",
     # isort
     "I",
+    # Pylint
+    "PL",
 ]
 ignore = [
     # It is fine tha some line are longer than the length limit
     "E501",
+    # High false positive rate. Often a plain number is the most expressive, e.g. when checling lengths.
+    "PLR2004",
 ]
