--- a/ruff.toml
+++ b/ruff.toml
@@ -34,10 +34,14 @@ select = [
     "I",
     # Pylint
     "PL",
+    # Ruff-specific
+    "RUF"
 ]
 ignore = [
     # It is fine tha some line are longer than the length limit
     "E501",
     # High false positive rate. Often a plain number is the most expressive, e.g. when checling lengths.
     "PLR2004",
+    # Using Optinal and '= None' at once is overly verbose and hurts readability
+    "RUF013",
 ]
