--- a/test/aspect/BUILD
+++ b/test/aspect/BUILD
@@ -1,9 +1,25 @@
 load("@rules_python//python:defs.bzl", "py_test")
 
 py_test(
-    name = "execute_tests_utest",
+    name = "result_test",
     srcs = [
-        "execute_tests_impl.py",
-        "execute_tests_utest.py",
+        "result.py",
+        "result_test.py",
+    ],
+)
+
+py_test(
+    name = "test_case_test",
+    srcs = [
+        "test_case.py",
+        "test_case_test.py",
+    ],
+)
+
+py_test(
+    name = "version_test",
+    srcs = [
+        "version.py",
+        "version_test.py",
     ],
 )
