--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Unit tests
         run: bazel test -- //src/... //test/aspect:all //third_party/...
       - name: Execute Mypy
-        run: bazel build --config=mypy -- //src/... //test/aspect:all
+        run: bazel build --config=mypy -- //src/... //test/aspect:all //test/apply_fixes:all
 
   integration-tests-aspect:
     runs-on: ubuntu-22.04
