--- a/test/aspect/BUILD
+++ b/test/aspect/BUILD
@@ -1,4 +1,4 @@
-load("@rules_python//python:defs.bzl", "py_test")
+load("@rules_python//python:defs.bzl", "py_library", "py_test")
 
 py_test(
     name = "result_test",
@@ -22,4 +22,10 @@ py_test(
         "version.py",
         "version_test.py",
     ],
+)
+
+# Helper target to enable mypy
+py_library(
+    name = "python_files",
+    srcs = glob(["**/*.py"]),
 )
